tests/machine/x/c/string_in_operator.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/string_in_operator.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/string_in_operator.c:7:23: error: expected ‘)’ before ‘in’
    7 |   printf("%d\n", "cat" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/string_in_operator.c:7:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
    7 |   printf("%d\n", "cat" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/string_in_operator.c:8:23: error: expected ‘)’ before ‘in’
    8 |   printf("%d\n", "dog" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/string_in_operator.c:8:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
    8 |   printf("%d\n", "dog" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
